[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/GameSetupMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 960.0
color = Color( 0.262745, 0.235294, 0.235294, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 960.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 153.0
margin_top = 285.0
margin_right = 806.0
margin_bottom = 675.0

[node name="Buttons" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 653.0
margin_bottom = 390.0

[node name="ButtonsVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Buttons"]
margin_right = 653.0
margin_bottom = 390.0

[node name="SeedInput" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox"]
margin_right = 653.0
margin_bottom = 70.0
rect_min_size = Vector2( 653, 0 )

[node name="SeedTextLabels" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/SeedInput"]
margin_right = 653.0
margin_bottom = 70.0
rect_min_size = Vector2( 645, 0 )

[node name="SeedInputMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/SeedInput/SeedTextLabels"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 65.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="SeedInputLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/SeedInput/SeedTextLabels"]
margin_left = 34.0
margin_top = 5.0
margin_right = 149.0
margin_bottom = 65.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = "Seed:"

[node name="SeedInput" type="LineEdit" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/SeedInput/SeedTextLabels"]
margin_left = 153.0
margin_right = 653.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = SubResource( 1 )
text = "mycoolseed"
context_menu_enabled = false
caret_blink = true

[node name="AlgorithmSelector" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox"]
margin_top = 74.0
margin_right = 653.0
margin_bottom = 262.0
rect_min_size = Vector2( 653, 0 )

[node name="AlgorithmSelector" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector"]
margin_left = 83.0
margin_right = 569.0
margin_bottom = 188.0

[node name="AlgorithmSelectorMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector"]
margin_top = 64.0
margin_right = 30.0
margin_bottom = 124.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="AlgorithmSelectorLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector"]
margin_left = 34.0
margin_top = 64.0
margin_right = 250.0
margin_bottom = 124.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = "Algorithm:"

[node name="AlgorithmList" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector"]
margin_left = 254.0
margin_right = 486.0
margin_bottom = 188.0

[node name="AlgorithmList" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList"]
margin_right = 232.0
margin_bottom = 188.0

[node name="BSP_Item" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList"]
margin_right = 232.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/BSP_Item"]
margin_left = 1.0
margin_right = 231.0
margin_bottom = 60.0
rect_min_size = Vector2( 230, 0 )

[node name="BSP_ItemMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/BSP_Item/HBoxContainer"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = "*"

[node name="BSP_ItemLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/BSP_Item/HBoxContainer"]
margin_left = 34.0
margin_right = 112.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = "BSP"

[node name="CA_Item" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList"]
margin_top = 64.0
margin_right = 232.0
margin_bottom = 124.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/CA_Item"]
margin_left = 1.0
margin_right = 231.0
margin_bottom = 60.0
rect_min_size = Vector2( 230, 0 )

[node name="CA_ItemMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/CA_Item/HBoxContainer"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = "*"

[node name="CA_ItemLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/CA_Item/HBoxContainer"]
margin_left = 34.0
margin_right = 86.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = "CA"

[node name="BSP_CA_Item" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList"]
margin_top = 128.0
margin_right = 232.0
margin_bottom = 188.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/BSP_CA_Item"]
margin_right = 232.0
margin_bottom = 60.0

[node name="BSP_CA_ItemMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/BSP_CA_Item/HBoxContainer"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = "*"

[node name="BSP_CA_ItemLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/AlgorithmSelector/AlgorithmSelector/AlgorithmList/AlgorithmList/BSP_CA_Item/HBoxContainer"]
margin_left = 34.0
margin_right = 232.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = "BSP & CA"

[node name="PlayButton" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox"]
margin_top = 266.0
margin_right = 653.0
margin_bottom = 326.0
rect_min_size = Vector2( 653, 0 )

[node name="PlayButtonLabels" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/PlayButton"]
margin_left = 251.0
margin_right = 401.0
margin_bottom = 60.0

[node name="PlayButtonMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/PlayButton/PlayButtonLabels"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="PlayButtonLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/PlayButton/PlayButtonLabels"]
margin_left = 34.0
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 116, 0 )
custom_fonts/font = SubResource( 1 )
text = "Play!"

[node name="BackButton" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox"]
margin_top = 330.0
margin_right = 653.0
margin_bottom = 390.0
rect_min_size = Vector2( 653, 0 )

[node name="BackButtonLabels" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/BackButton"]
margin_left = 160.0
margin_right = 493.0
margin_bottom = 60.0

[node name="BackButtonMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/BackButton/BackButtonLabels"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="BackButtonLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/BackButton/BackButtonLabels"]
margin_left = 34.0
margin_right = 333.0
margin_bottom = 60.0
rect_min_size = Vector2( 116, 0 )
custom_fonts/font = SubResource( 1 )
text = "Back to menu"
